# django_hw

./: .env  .flake8  Dockerfile  docker-compose.tests.yml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  init_db.sql  pyproject.toml
.github/workflows/: django.yml
bruno/: bruno.json
bruno/environments/: django_hw.bru
bruno/superuser/: Create repo.bru  Delete repo.bru  Get all repos.bru  Get single repo.bru  Retrieve token.bru
bruno/user/: Patch repo.bru  Retrieve token.bru  Update repo.bru
django_hw/: .env  asgi.py  settings.py  urls.py  wsgi.py
fixtures/: fixture.json
frontend/: base.html  devs.html  homepage.html  profile.html  signup.html
frontend/includes/: profile.html  signup.html
repository/: admin.py  models.py  serializers.py  urls.py  views.py
repository/migrations/: 0001_initial.py  0002_ticket_name.py  0003_developer_user.py  0004_alter_developer_user.py
templates/: base.html  devs.html  homepage.html  login.html  profile.html  tickets.html
templates/includes/: fields.html
tests/: runner.py  test_api.py
